objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Action_Alert__c</fullName>
        <formula>IF(OR( ISPICKVAL( Processing_Stage__c , &apos;Completed&apos;),ISPICKVAL( Processing_Stage__c , &apos;Refunded&apos;),ISPICKVAL( Processing_Stage__c , &apos;N/A&apos;),ISPICKVAL( Processing_Stage__c , &apos;Kitted&apos;),ISPICKVAL( Processing_Stage__c , &apos;Exchanged for Other Services&apos;) ),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/greenIndicator&quot;, &apos;image&apos;, 20,20),IF(Due_Date__c - TODAY() &gt;= 14, IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/greenIndicator&quot;, &apos;image&apos;, 20,20),  IF(AND(Due_Date__c - TODAY() &lt; 14, Due_Date__c - TODAY() &gt; 0), IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/yellowIndicator&quot;, &apos;image&apos;, 20,20), 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/redIndicator&quot;, &apos;image&apos;, 20,20)
) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_User_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to track whether the email should be sent to LC or Processor</description>
        <label>Active User Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>andersonadvisors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor_Admin__c</fullName>
        <label>Advisor Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Advisor_Admin_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgeStage__c</fullName>
        <description>This field is used in flow OrderItem&apos;s - UpdateStage . We need to calculate Age . IF the Age is equal or greater 63 days then OSI stage update throiugh flow. 

Requirement: Update Stage after 63 days</description>
        <formula>today()-  LastModifiySatge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AgeStage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Today()- ServiceDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Completed__c</fullName>
        <label>Last QA Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BCP_Renewal_Advisor__c</fullName>
        <label>BCP/Renewal Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Renewal_Advisors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <label>Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Admin__c</fullName>
        <label>Bookkeeping Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Karissa Williams</fullName>
                </value>
                <value>
                    <fullName>Carol Spagnoletta</fullName>
                </value>
                <value>
                    <fullName>Jennifer Petrunyak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Onboarder__c</fullName>
        <label>Bookkeeping Onboarder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Onboarder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Reviewer__c</fullName>
        <label>Bookkeeping Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Reviewer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Present on the page layout for users to know which client&apos;s order they are working on.</description>
        <formula>Order.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For a link to the client page, hover over the Order number and a clickable version of the client name will appear.</inlineHelpText>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>IF(Active_User__c = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>Today() -  DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the Service Item was last modified.</inlineHelpText>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete__c</fullName>
        <formula>Completed_Date__c - ServiceDate</formula>
        <inlineHelpText>Days to complete the OSI</inlineHelpText>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_File_Entity__c</fullName>
        <formula>DATETIMEVALUE(Entity__r.Organizational_Date__c) - CreatedDate</formula>
        <label>Days to File Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Made_on__c</fullName>
        <label>Entity Filled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Organization_State_F__c</fullName>
        <formula>TEXT( Entity__r.Organization_State__c )</formula>
        <label>Entity Organization State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Organization_State__c</fullName>
        <description>Captures the organization state from entity</description>
        <label>Entity Organization State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Tracking__c</fullName>
        <label>Error Tracking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anonymity Concern</fullName>
                </value>
                <value>
                    <fullName>Assigned incorrectly</fullName>
                </value>
                <value>
                    <fullName>Confirmation needed due to conflicting notes/info</fullName>
                </value>
                <value>
                    <fullName>Duplicate OSI</fullName>
                </value>
                <value>
                    <fullName>Impossible Configuration</fullName>
                </value>
                <value>
                    <fullName>Missing Required Info</fullName>
                </value>
                <value>
                    <fullName>Misspelling</fullName>
                </value>
                <value>
                    <fullName>Name search not fully conducted</fullName>
                </value>
                <value>
                    <fullName>No Entity Attached</fullName>
                </value>
                <value>
                    <fullName>No Sale Entity</fullName>
                </value>
                <value>
                    <fullName>OSI not needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>WPB Mismatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Coordinator__c</fullName>
        <label>Fulfillment Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alyssa Hoopii</fullName>
                </value>
                <value>
                    <fullName>Carlye Martinsky</fullName>
                </value>
                <value>
                    <fullName>Dana Heckathorn</fullName>
                </value>
                <value>
                    <fullName>Danielle Creamer</fullName>
                </value>
                <value>
                    <fullName>Hayley Karlson</fullName>
                </value>
                <value>
                    <fullName>Jacob Summey</fullName>
                </value>
                <value>
                    <fullName>Jason Lundquist</fullName>
                </value>
                <value>
                    <fullName>Jennifer Seibert</fullName>
                </value>
                <value>
                    <fullName>Jeremy Barry</fullName>
                </value>
                <value>
                    <fullName>Jessica Kim</fullName>
                </value>
                <value>
                    <fullName>Nadine Fanaro</fullName>
                </value>
                <value>
                    <fullName>Ryann Brown</fullName>
                </value>
                <value>
                    <fullName>Samantha Carrillo</fullName>
                </value>
                <value>
                    <fullName>Sonya Johnson</fullName>
                </value>
                <value>
                    <fullName>Tiv Taylor</fullName>
                </value>
                <value>
                    <fullName>Zachary Graham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Description__c</fullName>
        <formula>Product2.Fulfillment_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Analyst__c</fullName>
        <label>Integration Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integration_Analyst</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KMS_Tax_Advisor__c</fullName>
        <label>KMS Tax Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KMS_Tax_Advisors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Trust_Reviewer__c</fullName>
        <label>Land Trust Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amanda Wynalda</fullName>
                </value>
                <value>
                    <fullName>Carly Coons</fullName>
                </value>
                <value>
                    <fullName>Justin McCord</fullName>
                </value>
                <value>
                    <fullName>Kelli Wise</fullName>
                </value>
                <value>
                    <fullName>Leah Singh</fullName>
                </value>
                <value>
                    <fullName>Marissa Flannery</fullName>
                </value>
                <value>
                    <fullName>Megan Fenn</fullName>
                </value>
                <value>
                    <fullName>Michelle Frank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Trust_and_Deed_Admin__c</fullName>
        <label>Land Trust and Deed Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Michelle Frank</fullName>
                </value>
                <value>
                    <fullName>Leah Singh</fullName>
                    <default>true</default>
                    <label>Leah Singh</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiySatge__c</fullName>
        <description>This Field is used for When user update Type=Deed and Stage =Sent to Client for Signatures On OSI. Then this field populated and have value. 
Requirement : Update Stage after 63 days</description>
        <label>Stage-Last Modify Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_Coordinator_Formula__c</fullName>
        <description>Reflects the LC on order</description>
        <formula>TEXT(Order.Law_Coordinator__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Success Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Coordinator__c</fullName>
        <label>Client Success Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CSR</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Lightning__c</fullName>
        <formula>&quot;https://andersonadvisors.lightning.force.com/lightning/r/OrderItem/&quot; + Id + &quot;/view&quot;</formula>
        <label>Link for Lightning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Clerk__c</fullName>
        <label>Mail Clerk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Mail_Clerks</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Type__c</fullName>
        <formula>Product2.New_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Profit_Processor__c</fullName>
        <label>Non-Profit Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Non_Profit_Processor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paralegal_Tax_Analyst__c</fullName>
        <label>Tax Form Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bobbi Williams</fullName>
                </value>
                <value>
                    <fullName>Aiden Larsen</fullName>
                </value>
                <value>
                    <fullName>Ashley Sevy</fullName>
                </value>
                <value>
                    <fullName>Amanda Wallace</fullName>
                </value>
                <value>
                    <fullName>Dana Cummings</fullName>
                </value>
                <value>
                    <fullName>Bradley Calvert</fullName>
                </value>
                <value>
                    <fullName>Octavious Forson</fullName>
                </value>
                <value>
                    <fullName>Bryan Freitag</fullName>
                </value>
                <value>
                    <fullName>Grant Grajek</fullName>
                </value>
                <value>
                    <fullName>Megan Healy</fullName>
                </value>
                <value>
                    <fullName>Maryana Postolovska</fullName>
                </value>
                <value>
                    <fullName>Andres Govea</fullName>
                </value>
                <value>
                    <fullName>Angela Christian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pension_Processor__c</fullName>
        <label>Pension Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traci Craig</fullName>
                </value>
                <value>
                    <fullName>Debbie Trentini</fullName>
                </value>
                <value>
                    <fullName>Jaime Escandon</fullName>
                </value>
                <value>
                    <fullName>Tameka Fulton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Priority__c</fullName>
        <label>Processing Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Critical-Mad Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Processing_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processor_Reviewer__c</fullName>
        <label>Processor Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processor_Reviewer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <label>Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Advisor_CSC__c</fullName>
        <label>Renewal Advisor/CSC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Bernhardt</fullName>
                </value>
                <value>
                    <fullName>Adrian Sanchez</fullName>
                </value>
                <value>
                    <fullName>Agha Abbas</fullName>
                </value>
                <value>
                    <fullName>Alexa Brown</fullName>
                </value>
                <value>
                    <fullName>Alfonso Andino</fullName>
                </value>
                <value>
                    <fullName>Alisha Basom</fullName>
                </value>
                <value>
                    <fullName>Alyssa Hoopii</fullName>
                </value>
                <value>
                    <fullName>Amanda Zipprich</fullName>
                </value>
                <value>
                    <fullName>Ambria Tibbs</fullName>
                </value>
                <value>
                    <fullName>Ami Meyers</fullName>
                </value>
                <value>
                    <fullName>Becky Seguin</fullName>
                </value>
                <value>
                    <fullName>Bekah Willard</fullName>
                </value>
                <value>
                    <fullName>Bianca Ayala</fullName>
                </value>
                <value>
                    <fullName>Brenna McGowan</fullName>
                </value>
                <value>
                    <fullName>Brittany Rains</fullName>
                </value>
                <value>
                    <fullName>Caitlynn Glass</fullName>
                </value>
                <value>
                    <fullName>Carly Coons</fullName>
                </value>
                <value>
                    <fullName>Chanitra Hill</fullName>
                </value>
                <value>
                    <fullName>Chase Foster</fullName>
                </value>
                <value>
                    <fullName>Chelsea Bojewski</fullName>
                </value>
                <value>
                    <fullName>Christian DeField</fullName>
                </value>
                <value>
                    <fullName>Claire Seals</fullName>
                </value>
                <value>
                    <fullName>Claudia Chasten</fullName>
                </value>
                <value>
                    <fullName>Colette Grier</fullName>
                </value>
                <value>
                    <fullName>Courtney Blacknall</fullName>
                </value>
                <value>
                    <fullName>Deborah Lewis</fullName>
                </value>
                <value>
                    <fullName>Denise Moon</fullName>
                </value>
                <value>
                    <fullName>Domanick Page-Whitaker</fullName>
                </value>
                <value>
                    <fullName>Duncan Bjerke</fullName>
                </value>
                <value>
                    <fullName>Dustin Hamby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Order.Opportunity.Sales_Rep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Stalled-Client</fullName>
                </value>
                <value>
                    <fullName>Stalled-Internal</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Need to Kit</fullName>
                </value>
                <value>
                    <fullName>Kitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Stalled-Client</fullName>
                </value>
                <value>
                    <fullName>Stalled-Internal</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Need to Kit</fullName>
                </value>
                <value>
                    <fullName>Kitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trust</label>
        <referenceTo>Trust__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Anderson Services</fullName>
                </value>
                <value>
                    <fullName>Annual List</fullName>
                </value>
                <value>
                    <fullName>BK Consult</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping - Misc</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping Tax Form</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping Virtual</fullName>
                </value>
                <value>
                    <fullName>Certified Copy</fullName>
                </value>
                <value>
                    <fullName>Change Filings</fullName>
                </value>
                <value>
                    <fullName>Charitable Registration</fullName>
                </value>
                <value>
                    <fullName>Deed</fullName>
                </value>
                <value>
                    <fullName>Dissolution</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Foreign Filings</fullName>
                </value>
                <value>
                    <fullName>Formation</fullName>
                </value>
                <value>
                    <fullName>Informational Only</fullName>
                </value>
                <value>
                    <fullName>IRS Form</fullName>
                </value>
                <value>
                    <fullName>Land Trust</fullName>
                </value>
                <value>
                    <fullName>Pensions</fullName>
                </value>
                <value>
                    <fullName>Pension Termination</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>RA Change</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Strategy Session</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Tax Review</fullName>
                </value>
                <value>
                    <fullName>WPB</fullName>
                    <label>Welcome Phase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unlimited_WY_Statutory_Trust__c</fullName>
        <label>Unlimited WY Statutory Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deborah Lewis</fullName>
                    <default>true</default>
                    <label>Deborah Lewis</label>
                </value>
                <value>
                    <fullName>Carly Coons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Comments_Utility__c</fullName>
        <label>Update Comments Utility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Update_Comments__c</fullName>
        <label>Update Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Processor__c</fullName>
        <label>VIP Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deborah Lewis</fullName>
                </value>
                <value>
                    <fullName>Carly Coons</fullName>
                </value>
                <value>
                    <fullName>Megan Fenn</fullName>
                </value>
                <value>
                    <fullName>James Morris</fullName>
                </value>
                <value>
                    <fullName>Amanda Wynalda</fullName>
                </value>
                <value>
                    <fullName>Brittany Rains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight0__c</fullName>
        <inlineHelpText>Measurement of Fulfillment Difficulty 1-3</inlineHelpText>
        <label>Weight</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <formula>VALUE(TEXT(PricebookEntry.Product2.Service_Fulfillment_Weight__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Measurement of Fulfillment Difficulty</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100_Fulfilled_QA_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be filled out by QA when it&apos;s verified that this item was completed.</inlineHelpText>
        <label>100% Fulfilled - QA Verified</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>